# rust_learning

exercise/a_variables/: Cargo.toml
exercise/c_simple_types/src/: main.rs
exercise/docs/src/: lib.rs
exercise/e_ownership_references/src/: main.rs
exercise/errors/src/: main.rs
exercise/g_collections_enums/src/: main.rs
exercise/guessing_game/src/: main.rs
exercise/logging/: Cargo.toml
exercise/logging/src/: lib.rs
exercise/option_enum/src/: main.rs
exercise/parse_json/src/: main.rs
exercise/testing/benches/: somename.rs
exercise/traits/src/: main.rs
projecs/attribute_macro/: Cargo.toml
projecs/attribute_macro/src/: lib.rs  main.rs
projecs/box_pointer/: Cargo.toml
projecs/cpu_intensive_and_tokio_tasks/: Cargo.toml
projecs/custom_derive_macro/: Cargo.toml
projecs/custom_error_handling/: Cargo.toml
projecs/error_handling/: Cargo.toml
projecs/error_handling_with_extern_crates/: Cargo.toml
projecs/features_consumer/: Cargo.toml
projecs/features_consumer/src/: main.rs
projecs/function_macro/: Cargo.toml
projecs/handle_errors/: Cargo.toml
projecs/http_get_request/: Cargo.toml
projecs/just_a_search/: Cargo.toml
projecs/looking_into_features/: Cargo.toml
projecs/looking_into_features/src/: lib.rs
projecs/mutex/: Cargo.toml
projecs/parse_json/: Cargo.toml
projecs/procedural_macro/: Cargo.toml
projecs/read_write_files/: Cargo.toml
projecs/reference_cycles/: Cargo.toml  main.rs
projecs/server/: 404.html
projecs/state_design_pattern/: Cargo.toml
projecs/testing/: Cargo.toml
projecs/tokio_streams/: Cargo.toml
(+58 files in other folders)
